src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Price_Ceiling__c</fullName>
        <label>Price Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Floor__c</fullName>
        <label>Price Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type__c</fullName>
        <formula>Product2.RecordType.DeveloperName</formula>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Price_Book_Entries_must_be_0</fullName>
        <active>false</active>
        <errorConditionFormula>UnitPrice != 0</errorConditionFormula>
        <errorMessage>List Price must be $0. Create a &quot;Pricing Structure&quot; record to set the price of a specific program.</errorMessage>
    </validationRules>
</CustomObject>